apps/springboot-template/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: springboot-template
  namespace: springboot-template
spec:
  selector:
    app: springboot-template

  ports:
  - port: 80
    targetPort: 8080
