apps/springboot-template/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: springboot-template

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb

  rules:
  - host: springboot.rajplatform.online

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: springboot-template
            port:
              number: 80
